new Integer instead of valueOf